cosmetic fixes for desktop and mobile spacing of containers

--- a/assets/main.css
+++ b/assets/main.css
@@ -4,3 +4,7 @@
 .page-enter, .page-leave-to {
     opacity: 0;
 }
+
+.overflow-dots {
+    text-overflow: ellipsis;
+}
